# rebalytics

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_data_acquisition.ipynb  02_data_exploration_processing.ipynb  03_modelling.ipynb
notebooks/reports/: correlation_table.csv
rebalytics/: __init__.py  dataset.py  features.py  plots.py
rebalytics/modeling/: predict.py  train.py
